cros: Center user list for 6+ users in views login/lock.

Bug: 854453
Change-Id: I7e1e187ce37a90036a4335ddd333f56b35bf1ac1
Reviewed-on: https://chromium-review.googlesource.com/1117709
Reviewed-by: Aga Wronska <agawronska@chromium.org>
Commit-Queue: Jacob Dufault <jdufault@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571319}
Former-commit-id: b796bdf0f66ae56caabc85f8b3b2e663bfd95d4f