ash/login/ui/scrollable_users_list_view.h
@@ -25,7 +25,6 @@ class BoxLayout;
 namespace ash {
 
 class HoverNotifier;
-class ScrollBar;
 
 // Scrollable list of the users. Stores the list of login user views. Can be
 // styled with GradientParams that define gradient tinting at the top and at the
@@ -71,11 +70,15 @@ class ASH_EXPORT ScrollableUsersListView : public views::ScrollView,
   void Layout() override;
   void OnPaintBackground(gfx::Canvas* canvas) override;
 
-  // ash::WallpaperControllerObserver:
+  // WallpaperControllerObserver:
   void OnWallpaperColorsChanged() override;
 
  private:
+  class ScrollBar;
+
   struct GradientParams {
+    static GradientParams BuildForStyle(LoginDisplayStyle style);
+
     // Start color for drawing linear gradient.
     SkColor color_from;
     // End color for drawing linear gradient.
@@ -84,26 +87,14 @@ class ASH_EXPORT ScrollableUsersListView : public views::ScrollView,
     SkScalar height;
   };
 
-  struct LayoutParams {
-    // Display style to determine layout and sizing of users list.
-    LoginDisplayStyle display_style;
-    // Spacing between user entries on users list.
-    int between_child_spacing;
-    // Insets around users list used in landscape orientation.
-    gfx::Insets insets_landscape;
-    // Insets around users list used in portrait orientation.
-    gfx::Insets insets_portrait;
-  };
-
   // Updates visibility of scroll bar thumb. Called when hover state changes.
   void OnHover(bool has_hover);
 
-  // Returns parameters of the layout for given display |style|.
-  LayoutParams GetLayoutParams(LoginDisplayStyle style);
-  // Returns parameters of the gradient for given display |style|.
-  GradientParams GetGradientParams(LoginDisplayStyle style);
+  // Display style to determine layout and sizing of users list.
+  LoginDisplayStyle display_style_;
 
-  views::BoxLayout* layout_ = nullptr;
+  // Layout for |contents()|.
+  views::BoxLayout* contents_layout_ = nullptr;
 
   // Owned by ScrollView.
   ScrollBar* scroll_bar_ = nullptr;
@@ -113,7 +104,6 @@ class ASH_EXPORT ScrollableUsersListView : public views::ScrollView,
   std::unique_ptr<HoverNotifier> hover_notifier_;
 
   GradientParams gradient_params_;
-  LayoutParams layout_params_;
 
   ScopedObserver<WallpaperController, WallpaperControllerObserver> observer_;
 
